<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registratiom"/>

    <TableLayout
        style="@style/Table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usrName"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regUsrName"
                android:minWidth="100dp"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/regPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:singleLine="true" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regFirstName"
                android:minWidth="100dp"
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regLastName"
                android:minWidth="100dp"
                android:singleLine="true" />
        </TableRow>
            <TableRow
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/regAddress"
                    android:minWidth="80dp"
                    android:singleLine="true" />
            </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postalCode"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regPostalCode"
                android:minWidth="100dp"
                android:singleLine="true" />
        </TableRow>
        <TableRow
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/registerBtn"
                android:layout_marginTop="20dp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/submit" />

        </TableRow>
    </TableLayout>

</LinearLayout>